--- a/week-08/day-2/todo-listing/src/main/resources/application.properties
+++ b/week-08/day-2/todo-listing/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/todo
+spring.datasource.url=jdbc:mysql://localhost/todo?useSSL=FALSE
 spring.datasource.username=root
 spring.datasource.password=csipan
 spring.jpa.hibernate.ddl-auto=create-drop
